# array-freeze-bug

./: Main.bad.dump-simpl  Main.dump-simpl.diff  Main.good.dump-simpl  Main.hs  array-freeze.cabal  flake.nix
