cabal-version: 3.0

name:
  array-freeze
version:
  0.1
build-type:
  Simple

common ghc-options
  default-language:
    Haskell2010

  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-type-defaults
    -Wno-unsafe

  if impl(ghc >= 8.8)
    ghc-options:
      -Wno-missing-deriving-strategies

  -- if impl(ghc >= 8.10)
  --   ghc-options:
  --     -Wno-prepositive-qualified-module

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

executable array-freeze
  import: ghc-options
  main-is:
    Main.hs
  build-depends:
    , base >=4.9
    , primitive
    , vector
